# aws-doc-chatbot

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md
.github/workflows/: ci.yml  deploy.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: agent.py  auth.py  config.py  main.py  mcp_client.py  sessions.py  smoke.py
backend/tests/: test_api.py  test_auth.py  test_sessions.py
docs/: architecture.md
infra/envs/dev/: .terraform.lock.hcl  dev.tfvars  main.tf  outputs.tf  variables.tf  versions.tf
infra/modules/apigw/: main.tf
infra/modules/cognito/: main.tf
infra/modules/dynamodb/: main.tf
infra/modules/ecr/: main.tf
infra/modules/frontend/: main.tf
infra/modules/frontend/assets/: index.html.tftpl
infra/modules/guardrail/: main.tf
infra/modules/lambda/: main.tf
infra/modules/observability/: main.tf
