[project]
name = "aws-doc-chatbot"
version = "0.1.0"
description = "Agentic AWS Documentation chatbot (Strands + Bedrock + AWS-Docs MCP)"
requires-python = ">=3.11,<3.13"
dependencies = [
    "strands-agents>=1.0.0",
    "mcp>=1.9.0",
    "awslabs.aws-documentation-mcp-server>=1.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "boto3>=1.35.0",
    "pydantic-settings>=2.4.0",
    "python-jose[cryptography]>=3.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
